--- a/views/webcomponent/testjquery.html
+++ b/views/webcomponent/testjquery.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="max-age" content="2">
-
-
+    <meta http-equiv="Expires" content="0">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yeshe JS </title>
@@ -37,7 +35,6 @@
             </div>
             <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
             <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-
             </div>
             <div id="error"></div>
 
@@ -46,13 +43,11 @@
     </body>
     <script type="module">
 
-        import { startPersonController } from './personViewController.js'
-
-        startPersonController();
+        import { startjqueryController } from "./testjquery.js"
+        // const searchParams = new URLSearchParams(window.location.search);
+        // console.log(searchParams.has('noticeId')); // true
+        //         launchNoticeController('mainPart', searchParams.get('noticeId'));
+        startjqueryController();
     </script>
-    <script type="module" src="./personViewController.js?test=7576"></script>
-    <script type="module" src="./personEditModalViewController.js?test=1234"></script>
-
-</body>
 
 </html>
