--- a/views/mainpage/mainpage.html
+++ b/views/mainpage/mainpage.html
@@ -9,13 +9,22 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yeshe JS </title>
+    <link rel="icon" href="/yeshejs/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
+
+    <style>
+        canvas {
+            border: 1px solid black;
+        }
+    </style>
+    <!-- <script type="module" src="./app.js"></script> -->
 </head>
 
 <body>
@@ -24,19 +33,16 @@
         </div>
         <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
         <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-
-
         </div>
-        <div class="col-md-12 " id="modaldisplay">
-            <div id="error"></div>
+        <div id="error"></div>
 
-        </div>
+    </div>
 
 </body>
 <script type="module">
-    import { startNoticeController } from './noticeViewController.js'
-    startNoticeController();
+
+    import { startMainPageController } from './mainpageViewController.js'
+    startMainPageController();
 </script>
-</body>
 
 </html>
