--- a/views/keyword/keyword.html
+++ b/views/keyword/keyword.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="max-age" content="2">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yeshe JS </title>
@@ -25,13 +25,14 @@
         </div>
         <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
         <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
+
         </div>
         <div id="error"></div>
     </div>
 </body>
 <script type="module">
-    import { startSearchController } from "./searchViewController.js"
-    startSearchController();
+    import { startKeywordController } from './keywordViewController.js'
+    startKeywordController();
 </script>
 
 </html>
