--- a/views/mainpage/mainpage.html
+++ b/views/mainpage/mainpage.html
@@ -28,15 +28,14 @@
 </head>
 
 <body>
-    <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
-        <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-        </div>
+    <div class="container-fluid">
+        <div id="menuSection"></div>
+        <div id="messageSection"></div>
+        <div id="searchSection"></div>
+        <div id="mainActiveSection"> </div>
         <div id="error"></div>
-
     </div>
+
 
 </body>
 <script type="module">
