--- a/views/notice/notice.html
+++ b/views/notice/notice.html
@@ -20,18 +20,14 @@
 </head>
 
 <body>
-    <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
-        <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
+    <div class="container-fluid" id="mainPart">
+        <div id="menuSection"></div>
+        <div id="messageSection"></div>
+        <div id="mainActiveSection"></div>
+        <div id="modaldisplay"></div>
+        <div id="error"></div>
 
-
-        </div>
-        <div class="col-md-12 " id="modaldisplay">
-            <div id="error"></div>
-
-        </div>
+    </div>
 
 </body>
 <script type="module">
