--- a/views/search/search.html
+++ b/views/search/search.html
@@ -20,15 +20,14 @@
 </head>
 
 <body>
-    <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
-        <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-        </div>
+    <div class="container-fluid">
+        <div class="col-12" id="menuSection"></div>
+        <div class="col-12 " id="messageSection"></div>
+        <div class="col-12 " id="mainActiveSection"></div>
         <div id="error"></div>
     </div>
 </body>
+
 <script type="module">
     import { startSearchController } from "./searchViewController.js"
     startSearchController();
