--- a/views/person/person.html
+++ b/views/person/person.html
@@ -20,13 +20,10 @@
 </head>
 
 <body>
-    <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
-        <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-
-        </div>
+    <div class="container-fluid" id="mainPart">
+        <div id="menuSection"></div>
+        <div id="messageSection"></div>
+        <div id="mainActiveSection"></div>
         <div id="error"></div>
     </div>
 </body>
