--- a/views/search/search.html
+++ b/views/search/search.html
@@ -22,6 +22,7 @@
 <body>
     <div class="container-fluid">
         <div class="col-12" id="menuSection"></div>
+        <div class="col-12 " id="searchSection"></div>
         <div class="col-12 " id="messageSection"></div>
         <div class="col-12 " id="mainActiveSection"></div>
         <div id="error"></div>
