--- a/views/notice/notice.html
+++ b/views/notice/notice.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="container-fluid" id="mainPart">
+    <div class="container" id="mainPart">
         <div id="menuSection"></div>
         <div id="messageSection"></div>
         <div id="mainActiveSection"></div>
