--- a/shared/assets/css/custom.css
+++ b/shared/assets/css/custom.css
@@ -1,5 +1,10 @@
-  @media (min-width: 992px) {
-      /* body {
-          background-color: grey;
-      } */
-  }
+@media (max-width: 320px) {
+
+    /* .element {
+        width: 80%;
+    } */
+
+    /* .container {
+        max-width: 640px
+    } */
+}
