--- a/views/documentation/documentation.html
+++ b/views/documentation/documentation.html
@@ -27,7 +27,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"> -->
     </script>
-    <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
+    <link href="./documentation.css" rel="stylesheet" />
     <style>
         canvas {
             border: 1px solid black;
@@ -40,12 +40,7 @@
     <div class="container">
         <div id="menuSection"></div>
         <div id="messageSection"></div>
-        <div id="searchSection"></div>
-    </div>
-    <div class="container-fluid" style="--bs-gutter-x:0rem">
-        <div id="mainActiveSection"> </div>
-    </div>
-    <div class="container">
+        <div id="mainActiveSection" style="margin-top:100px"> </div>
         <div id="error"></div>
         <div id="footerSection"> </div>
     </div>
@@ -54,8 +49,8 @@
 </body>
 <script type="module">
 
-    import { startMainPageController } from './mainpageViewController.js'
-    startMainPageController();
+    import { startDocumentationController } from './documentationViewController.js'
+    startDocumentationController();
 </script>
 
 </html>
