--- a/views/search/search.html
+++ b/views/search/search.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="col-12" id="menuSection"></div>
         <div class="col-12 " id="searchSection"></div>
         <div class="col-12 " id="messageSection"></div>
