--- a/views/mainpage/mainpage.html
+++ b/views/mainpage/mainpage.html
@@ -54,7 +54,7 @@
     </div>
 </body>
 <script type="module">
-    let wsUrlformel = "test";
+    // let wsUrlformel = "test";
     import { startMainPageController } from './mainpageViewController.js'
     startMainPageController();
 </script>
