--- a/views/simpleentity/simpleentity.html
+++ b/views/simpleentity/simpleentity.html
@@ -22,18 +22,15 @@
 
 <body>
     <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
+        <div class="col-md-12 " id="menuSection" style="margin-top:50px"></div>
         <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-
-        </div>
+        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px"></div>
         <div id="error"></div>
     </div>
 </body>
 <script type="module">
-    import { startsimpleentityController } from './simpleentityViewController.js'
-    startsimpleentityController();
+    import { startsimpleEntityController } from './simpleEntityViewController.js'
+    startsimpleEntityController();
 </script>
 
 </html>
