--- a/views/subNotice/subNotice.html
+++ b/views/subNotice/subNotice.html
@@ -11,27 +11,30 @@
     <title>Yeshe JS </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+ -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
     <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
+    <link rel="icon" href="/yeshejs/favicon.png" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="col-12" id="menuSection"></div>
-        <div class="col-12 " id="searchSection"></div>
-        <div class="col-12 " id="messageSection"></div>
-        <div class="col-12 " id="mainActiveSection"></div>
+    <div class="container" id="mainPart">
+        <div id="menuSection"></div>
+        <div id="messageSection"></div>
+        <div id="mainActiveSection"></div>
+        <div id="modaldisplay"></div>
         <div id="error"></div>
-    </div>
-</body>
 
+    </div>
+
+</body>
 <script type="module">
-    import { startSearchController } from "./searchViewController.js"
-    startSearchController();
+    import { startsubNoticeController } from './subNoticeViewController.js'
+    startsubNoticeController();
 </script>
+</body>
 
 </html>
