--- a/views/notice/notice.html
+++ b/views/notice/notice.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-age=0">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 
@@ -32,8 +32,10 @@
 
 </body>
 <script type="module">
+
     import { startNoticeController } from './noticeViewController.js'
     startNoticeController();
+
 </script>
 </body>
 
