--- a/views/search/search.html
+++ b/views/search/search.html
@@ -23,6 +23,7 @@
     <div class="container">
         <div class="col-12" id="menuSection"></div>
         <div class="col-12 " id="searchSection"></div>
+        <div class="col-12 " id="modalSection"></div>
         <div class="col-12 " id="messageSection"></div>
         <div class="col-12 " id="mainActiveSection"></div>
         <div id="error"></div>
