--- a/views/person/person.html
+++ b/views/person/person.html
@@ -24,6 +24,7 @@
     <div class="container" id="mainPart">
         <div id="menuSection"></div>
         <div id="messageSection"></div>
+        <div id="modalSection"></div>
         <div id="mainActiveSection"></div>
         <div id="error"></div>
     </div>
