--- a/views/docu/docu.html
+++ b/views/docu/docu.html
@@ -30,7 +30,7 @@
     <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
     <link rel="icon" href="/yeshejs/favicon.png" />
 
-    <link href="./documentation.css" rel="stylesheet" />
+    <link href="./docu.css" rel="stylesheet" />
 </head>
 
 <body>
