--- a/views/docu/docu.css
+++ b/views/docu/docu.css
@@ -7,12 +7,13 @@ h1 {
 }
 
 h2 {
-    font-size: 1.2em;
+    font-size: 1.5em;
     text-decoration: underline;
 }
 
 h3 {
-    font-size: 1em;
+    font-size: 1.2em;
+    text-decoration: underline;
 }
 
 h4 {
