--- a/views/simpleentity/simpleentity.html
+++ b/views/simpleentity/simpleentity.html
@@ -22,6 +22,7 @@
     <div class="container" id="mainPart">
         <div class="col-md-12 " id="menuSection" style="margin-top:50px"></div>
         <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
+        <div class="col-md-12 " id="modalSection" style="margin-top:50px"></div>
         <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px"></div>
         <div id="error"></div>
     </div>
