--- a/views/keyword/keyword.html
+++ b/views/keyword/keyword.html
@@ -20,12 +20,10 @@
 
 <body>
     <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
-        <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-
-        </div>
+        <div id="menuSection"></div>
+        <div id="messageSection"></div>
+        <div id="modalSection"></div>
+        <div id="mainActiveSection"> </div>
         <div id="error"></div>
     </div>
 </body>
