--- a/views/subNotice/subNotice.html
+++ b/views/subNotice/subNotice.html
@@ -22,8 +22,8 @@
     <div class="container" id="mainPart">
         <div id="menuSection"></div>
         <div id="messageSection"></div>
+        <div id="modalSection"></div>
         <div id="mainActiveSection"></div>
-        <div id="modaldisplay"></div>
         <div id="error"></div>
 
     </div>
