--- a/views/search/search.html
+++ b/views/search/search.html
@@ -19,14 +19,12 @@
 
     <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
     <!-- <link href="./custom.css" rel="stylesheet" /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dynalight&family=Lexend:wght@100..900&display=swap"
         rel="stylesheet">
-    <style>
-        /* body {
-            font-family: 'Lexend'
-        } */
+    <style> -->
+    <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
     </style>
 </head>
 
