--- a/views/subNotice/subNotice.html
+++ b/views/subNotice/subNotice.html
@@ -15,6 +15,10 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
     <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+        integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
+
     <link rel="icon" href="/yeshejs/favicon.png" />
 </head>
 
@@ -30,8 +34,8 @@
 
 </body>
 <script type="module">
-    import { startsubNoticeController } from './subNoticeViewController.js'
-    startsubNoticeController();
+    import { startsubnoticeController } from './subnoticeViewController.js'
+    startsubnoticeController();
 </script>
 </body>
 
