--- a/shared/assets/css/custom.css
+++ b/shared/assets/css/custom.css
@@ -1,3 +1,8 @@
 .tibetanChars {
     font-size: 1.5rem !important;
 }
+
+a {
+    color: var(--bs-danger-text-emphasis) !important;
+    text-decoration: underline;
+}
