--- a/views/person/person.html
+++ b/views/person/person.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
         integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
 
-    <!-- <link href="../../shared/assets/css/custom.css" rel="stylesheet" /> -->
+    <link href="../../shared/assets/css/custom.css" rel="stylesheet" />
     <link rel="icon" href="/yeshejs/favicon.png" />
 </head>
 
