--- a/views/notice/notice.html
+++ b/views/notice/notice.html
@@ -29,6 +29,7 @@
         <div id="mainActiveSection"></div>
         <div id="modaldisplay"></div>
         <div id="error"></div>
+        <div id="footerSection"> </div>
     </div>
 
 </body>
